Fixed portfolio not showing current data, now allows overwriting investments, navbar opacity issue

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
 }
 
 ul > li > a.nav-link-active {
-	opacity: 80%;
+	opacity: .8;
 	color: var(--electric-blue);
 }
 
